fixed issue with vue cal flexbox rendering on IE10/11

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -149,6 +149,13 @@ section {
     }
 
   }
+  .vuecal__cells {
+    height: 100%;
+
+    & > .vuecal__flex {
+      height: 100%;
+    }
+  }
   .vuecal__arrow {
     background:white;.button {
     background: $secondary-color;
